#M54 - SAML Search Templates alignment issue

--- a/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
+++ b/hypersocket-ui-bootstrap/src/main/resources/webapp/css/style.css
@@ -511,10 +511,6 @@ div.tablePages ul.pagination {
 	margin: 2px;
 }
 
-.searchDialog {
-	height: 400px;
-}
-
 #firstSteps {
 	overflow: auto;
 }
